Friday, December 25, 2009
	Chris Thielen:
		* Fixed Image::Resize()

Saturday, December 19, 2009
	Matt Zweig:
		* Adds Optional FreeType+FTGL support

Wednesday, December 9, 2009
	Matt Zweig:
		* Merged Weapons and QuadTree into the Epiar mainline.
		* Added projectile collisions.

Monday, December 7, 2009
	Matt Zweig:
		* Created a Animation tool.

Sunday, December 5, 2009
	Shawn Reynolds:
		* Created basic weapons, firing, and switching.

	Matt Zweig:
		* Added QuadTree culling to the Radar

Saturday, December 5, 2009
	Moss Jones:
		* Fixed Player actions while paused.

Mnday, November 30, 2009
	Matt Zweig:
		* Implemented a Quadtree for storing and retrieving Sprites based off
		of locality.
		* Prevents unnecessary drawing by culling Sprites using the QuadTree.

Sunday, November 22, 2009
	Matt Zweig:
		* Added Ship damage and removal.
		* Fixed window-child relative origin.
		* Created basic Shipyard.
		* Small optimizations to normalizeAngle, DrawTiled and XML-Get.

Sunday, November 21, 2009
	Matt Zweig:
		* Moved Lua code to Resources directory.
		* Split Lua functionality into seperate Scenarios.

Sunday, November 15, 2009
	Matt Zweig:
		* Added single-window close.
		* Fixed Lua pauseMessage() function.
		* Added function to fetch model names from Lua.
		* Added Lua Bridge for Planets.
		* Added function to fetch ship and planet lists from Lua.
		* Made Lua Planets and Ships Type-Safe.

	Maoserr:
		* Fixing cross-platform compilation warnings.
		* Fixed Logging on Windows.

Saturday, November 14, 2009
	Matt Zweig:
		* Added Lua functions to set ui_picture images based off of Ship
		models
		* Added Lua functions to change radar color.

Friday, November 13, 2009
	Shawn Reynolds:
		* Added screen shaking.

Tuesday, November 10, 2009
	Matt Zweig:
		* Added 17 old Epiar ship images and models.

Saturday, November 7, 2009
	Chris Thielen:
		* UI logic about mouse focus is much better
		* Buttons now visibly click