@@ -1,3 +1,7 @@
+Sunday, January 24, 2010
+	Chris Thielen:
+		* Implemented virtual timer. Timer code is still in flux and interpolation needs to be implemented.
+
 Friday, December 25, 2009
 	Chris Thielen:
 		* Fixed Image::Resize()
